Fix overflow in header when not logged in, improve CLS

--- a/src/scss/phy/logo.scss
+++ b/src/scss/phy/logo.scss
@@ -11,11 +11,11 @@
     vertical-align: top;
 
     @include respond-above(xs) {
-      width: 10rem;
+      width: 9.9rem;
     }
 
     @media print {
-      width: 10rem;
+      width: 9.9rem;
     }
   }
 }
